@@ -193,7 +193,7 @@ void CAvrProgCommands::writeEEPROM(uint8_t *buffer, int size) {
 	//delayMs(0x14);
 }
 
-void CAvrProgCommands::writeFuses(uint8_t lfuse, uint8_t hfuse, uint8_t efuse) {
+void CAvrProgCommands::writeFuses(uint8_t lfuse, uint8_t hfuse, uint8_t efuse, int numOfFuses) {
 	// original AVRprog does an erase before writing fuses
 	// furthermore it writes default fuses, before programming the new ones
 
@@ -219,41 +219,9 @@ void CAvrProgCommands::writeFuses(uint8_t lfuse, uint8_t hfuse, uint8_t efuse) {
 	data[7] = hfuse;
 	data[11] = efuse;
 
-	COut::dd("Set 3 fuses");
+	COut::dd("Set " + CFormat::intToString(numOfFuses) + " fuses");
 
-	executeCommands(command, 3, data);
-}
-
-void CAvrProgCommands::writeFuses(uint8_t lfuse, uint8_t hfuse) {
-	// original AVRprog does an erase before writing fuses
-	// furthermore it writes default fuses, before programming the new ones
-
-	// todo: richtiges command und daten einfügen
-
-	uint8_t command[] = {0x02, 0x04, 0x00, 0x00, 0x00, 0x09, 0x00};
-	uint8_t data[] = {	0xac, 0xa0, 0x00, 0xe1, 0xac, 0xa8, 0x00, 0x99, 0xac, 0xa4, 0x00, 0xfd, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
-
-	data[3] = lfuse;
-	data[7] = hfuse;
-
-	COut::dd("Set 2 fuses");
-
-	executeCommands(command, 3, data);
+	executeCommands(command, numOfFuses, data);
 }
 
 uint8_t *CAvrProgCommands::readFlash(int size) {
@@ -277,7 +245,7 @@ uint8_t *CAvrProgCommands::readEEPROM(int size) {
 }
 
 /*
- * Reads 'size' fuse bytes. Currently only controllers with 3 fuses are supported.
+ * Reads 'size' fuse bytes.
  *
  * The fuses are returned in a byte array.
  */
@@ -309,11 +277,7 @@ uint8_t *CAvrProgCommands::readFuses(int size) {
 			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 			0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00};
 
-	if (size != 3) {
-		throw CommandException("Only MCUs with 3 fuse bytes are supported.");
-	}
-
-	executeCommands(command, 4, data);
+	executeCommands(command, size + 1, data);
 
 	len = 256;
 	iso_read(3, &buffer, &len);
@@ -394,7 +358,7 @@ void CAvrProgCommands::writeFlashChunk(uint8_t *code, int chunk, int pageSize) {
 
 	iso_write(3, code, USB_TRANSFER_SIZE);
 
-	// when sending chunk 512 switch addressing to extended
+	// when sending page/chunk 512 switch addressing to extended, this is not well tested
 	if (chunk == 512) {
 		setExtendedAddress();
 	}
