@@ -1,6 +1,7 @@
 Version 1.2.0
 	- extend socket autodetection (socket is now an uint8_t)
-	- support for ATmega16
+	- add support for ATmega16 (added flash page size to config files)
+	- removed automatic chip erase when EEPROM is written
 
 Version 1.1.0
 	- added device autodetection support
